Bug fixes for version 2.6 & style changes (#41)
* AboutWindow#fix for long intro text

* Zoom in scatter chart - icon

* Intro background image url

* Clear scope store after login/logout

* Add info about attribute type to the attribute tree

* Get old Layers widget working again

* Geoserver login header z-index

* window headers style

* goeserver login header correct z-index

* Sorting bug fixed

* Layer tool window size

* Style updates

* Min and max sizes of floaters

* Remove border on multiselect button focus

* spinner-up and spinner-down icon

* Toggle icon

* Confirm button style

* Reload sharing widget after log action

* Feature info window - export button style

* Active floater always on the top

* feature info backgrounds

* Layers widget in 3D header

* ext widget header style in 3d

--- a/src/__new/js/view/settings/Settings.css
+++ b/src/__new/js/view/settings/Settings.css
@@ -8,7 +8,11 @@
 
 	display: none;
 	height: 25rem;
+	min-height: 20rem;
+	max-height: 35rem;
 	width: 35rem;
+	min-width: 25rem;
+	max-width: 45rem;
 	padding: .2rem .5rem .5rem;
 	position: absolute;
 	top: 8rem;
@@ -48,11 +52,11 @@
 	top: 0;
 	height: 100%;
 }
-.tool-window-header .settings-close {
+.tool-window-header .window-close {
 	font-size: .95rem;
 	color: rgb(65,69,81);
 }
-.tool-window-header .settings-close:hover {
+.tool-window-header .window-close:hover {
 	cursor: pointer;
 	background: rgb(224,227,231);
 }
