--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -3,7 +3,10 @@
 	* EXT COMPONENTS.....................overriding default ext style
 		* Windows........................common for all Ext-based windows
 			* Window header..............header and it's components
+			* 3D Map Window header.......header and it's components in mode-3d
 			* Window body................body declarations
+			* Areas window
+			* Colour selection window
 			* Login window...............login window specific declarations
 		* Forms..........................Ext forms
 			* Config form
@@ -81,12 +84,109 @@
 	background: rgba(234,237,241,1) url("../images/new/close.png") no-repeat 50% 50% !important;
 }
 
+/* 3D Map Window header */
+.newDesign .mode-3d .detached-window .x-window-header {
+	background: rgba(153,54,75,.9) !important;
+	height: 2.3rem !important;
+	padding: 0 .3rem;
+}
+.newDesign .mode-3d .detached-window .x-window-header .x-window-header-body,
+.newDesign .mode-3d .detached-window .x-window-header .x-window-header-body .x-box-inner {
+	height: 2.3rem !important;
+	line-height: 2.4rem;
+}
+.newDesign .mode-3d .detached-window .x-window-header-text-default {
+	color: #eee;
+}
+.newDesign .mode-3d .detached-window .x-window-header .x-tool {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: background .3s ease-in-out;
+	top: 0 !important;
+	height: 2.3rem !important;
+	width: 1.7rem !important;
+}
+.newDesign .mode-3d .detached-window .x-window-header .x-tool:not(.x-tool-disabled):hover {
+	background: rgba(255,255,255,.2);
+}
+.newDesign .mode-3d .detached-window .x-window-header .x-tool .x-tool-areacollapseall,
+.newDesign .mode-3d .detached-window .x-window-header .x-tool .x-tool-areacollapselevel,
+.newDesign .mode-3d .detached-window .x-window-header .x-tool .x-tool-areaexpandlevel {
+	background: transparent !important;
+	display: block;
+	z-index: 2;
+	position: relative;
+	height: 100%;
+	width: 100%;
+}
+
+.newDesign .mode-3d .detached-window .x-window-header .x-tool .x-tool-hide,
+.newDesign .mode-3d .detached-window .x-window-header .x-tool .x-tool-unselect,
+.newDesign .mode-3d .detached-window .x-window-header .x-tool .x-tool-unselectall {
+	display: block;
+	z-index: 2;
+	position: relative;
+	height: 100%;
+	width: 100%;
+}
+.newDesign .mode-3d .detached-window .x-window-header .x-tool .x-tool-hide {
+	background-image: url("../__new/img/minimise-icon-rounded.png") !important;
+	background-position-x: 1px;
+}
+.newDesign .mode-3d .detached-window .x-window-header .x-tool .x-tool-unselect {
+	background-image: url("../__new/img/unselect.png") !important;
+}
+.newDesign .mode-3d .detached-window .x-window-header .x-tool .x-tool-unselectall {
+	background-image: url("../__new/img/unselect-all.png") !important;
+	background-position-x: 3px;
+}
+
+.newDesign .mode-3d .detached-window .x-window-header .x-tool .x-mask {
+	background: none;
+}
+.newDesign .mode-3d .detached-window .x-window-header .x-tool:before {
+	color: #eee;
+	font-family: "FontAwesome";
+	font-size: 1rem;
+	display: block;
+	z-index: 1;
+	position: absolute;
+}
+.newDesign .mode-3d .detached-window .x-window-header .x-tool.x-tool-disabled:before {
+	color: #888;
+}
+.newDesign .mode-3d .detached-window .x-window-header .x-tool.areacollapseall:before {
+	content: "\f04a";
+}
+.newDesign .mode-3d .detached-window .x-window-header .x-tool.areacollapselevel:before {
+	content: "\f04b";
+	transform: rotate(180deg);
+}
+.newDesign .mode-3d .detached-window .x-window-header .x-tool.areaexpandlevel:before {
+	content: "\f04b";
+}
+
 /* Window body */
 .newDesign .x-window-body {
 	border: 0;
 }
 .newDesign .x-panel-body-default-framed {
 	padding: 10px;
+}
+
+/* Areas window */
+.newDesign .mode-3d .x-window .x-tree-panel.areaTreeSelection {
+	border: 0;
+	padding: 0 0 0 .2rem;
+}
+
+	/* Colour selection window */
+.newDesign  #window-colourSelection-body {
+	padding: 1rem 0;
+}
+.newDesign  #window-colourSelection-body .x-panel-body-default {
+	border: 0;
 }
 
 /* login window */
@@ -232,10 +332,12 @@
 	font-family: "FontAwesome";
 	font-size: 1rem;
 }
-.newDesign.x-border-box .configform  .x-form-arrow-trigger:before {
+.newDesign.x-border-box .configform  .x-form-arrow-trigger:before,
+.newDesign.x-border-box .configform  .x-form-spinner-down:before {
 	content: "\f107";
 }
-.newDesign.x-border-box .configform  .x-pickerfield-open .x-form-arrow-trigger:before {
+.newDesign.x-border-box .configform  .x-pickerfield-open .x-form-arrow-trigger:before,
+.newDesign.x-border-box .configform  .x-form-spinner-up:before {
 	content: "\f106";
 }
 
@@ -382,18 +484,18 @@
 .newDesign .x-btn.custom-button.x-btn-default-small.x-disabled {
 	pointer-events: none;
 }
-.newDesign .x-btn.custom-button.btn-confirm {
+.newDesign .x-btn.custom-button.x-btn-default-small.btn-confirm {
 	background: rgba(153,54,75,1);
 	border: 1px solid rgba(255, 255, 255, .15);
 	border-radius: .15rem;
 	transition: background .3s ease-out;
 }
-.newDesign .x-btn.custom-button.btn-confirm .x-btn-inner {
+.newDesign .x-btn.custom-button.x-btn-default-small.btn-confirm .x-btn-inner {
 	color: #fff;
 	font-size: .85rem;
 	font-weight: 500;
 }
-.newDesign .x-btn.custom-button.btn-confirm:hover, .x-btn.btn-confirm:focus {
+.newDesign .x-btn.custom-button.x-btn-default-small.btn-confirm:hover, .newDesign .x-btn.custom-button.x-btn-default-small.x-btn.btn-confirm:focus {
 	background: rgba(186,65,91,1);
 }
 .newDesign #app-tools-actions .x-btn {
@@ -511,6 +613,9 @@
 	background: #f4f3ef;
 }
 /* Common panel parts */
+.mewDesign .x-panel {
+	padding: .5rem 0;
+}
 .newDesign .x-panel-header {
 	background: rgba(233,235,237,1);
 	border-bottom: 0;
@@ -594,6 +699,9 @@
 .newDesign .chart-panel .x-panel-header .tool-chart-snapshot:before {
 	content: "\f030";
 }
+.newDesign .chart-panel .x-panel-header .tool-chart-search:before {
+	content: "\f00e";
+}
 .newDesign .chart-panel.x-panel-collapsed .x-panel-header .tool-chart-collapse:before,
 .newDesign .chart-panel.panel-snapshots.x-panel-collapsed .x-panel-header .x-tool:before {
 	content: "\f107";
@@ -616,6 +724,7 @@
 .newDesign .chart-panel .x-panel-header .tool-icon .x-tool-print,
 .newDesign .chart-panel .x-panel-header .tool-icon .x-tool-save,
 .newDesign .chart-panel .x-panel-header .tool-icon .x-tool-close,
+.newDesign .chart-panel .x-panel-header .tool-icon .x-tool-search,
 .newDesign .chart-panel .x-panel-header .x-tool-collapse-top,
 .newDesign .chart-panel .x-panel-header .x-tool-over .x-tool-collapse-top,
 .newDesign .chart-panel .x-panel-header .x-tool-expand-bottom,
@@ -669,6 +778,9 @@
 	display: flex;
 	padding: 0 1.5rem 0 1rem;
 	z-index: 1;
+}
+.newDesign #geoserver-login #header {
+	z-index: 0;
 }
 .newDesign #header .menu {
 	margin: 0;
@@ -1591,6 +1703,18 @@
 .newDesign .x-grid-row-over .x-grid-cell, .newDesign .x-grid-row-over .x-grid-rowwrap-div,
 .newDesign .x-grid-row-focused .x-grid-cell, .newDesign .x-grid-row-focused .x-grid-rowwrap-div {
 	background-color: #eee;
+}
+
+.newDesign #window-layerpanel-body .x-tree-checkbox {
+	 background-image: url('../images/new/unchecked.png');
+	 background-repeat: no-repeat;
+	 margin-top: 2px;
+	 width: 16px;
+	 height: 16px;
+	 }
+
+.newDesign #window-layerpanel-body .x-tree-checkbox-checked {
+	 background-image: url('../images/new/checked.png');
 }
 
 /* sreenshots */
