--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -683,6 +683,9 @@
 .newDesign .chart-panel.panel-snapshots .x-panel-header .x-tool:hover:before {
 	color: rgba(186,65,91,1);
 }
+.newDesign .chart-panel .x-panel-header .tool-chart-description:before {
+	content: "\f05a";
+}
 .newDesign .chart-panel .x-panel-header .tool-chart-settings:before {
 	content: "\f1de";
 }
@@ -718,6 +721,7 @@
 	font-weight: 600;
 	top: -6px;
 }
+.newDesign .chart-panel .x-panel-header .tool-icon .x-tool-description,
 .newDesign .chart-panel .x-panel-header .tool-icon .x-tool-gear,
 .newDesign .chart-panel .x-panel-header .tool-icon .x-tool-help,
 .newDesign .chart-panel .x-panel-header .tool-icon .x-tool-collapse,
