--- a/src/__new/js/view/settings/Settings.css
+++ b/src/__new/js/view/settings/Settings.css
@@ -13,7 +13,7 @@
 	width: 35rem;
 	min-width: 25rem;
 	max-width: 45rem;
-	padding: .2rem .5rem .5rem;
+	padding: 0 .5rem .5rem;
 	position: absolute;
 	top: 8rem;
 	left: calc(50% - 17.5rem);
@@ -31,10 +31,10 @@
 /* header */
 .tool-window-header {
 	cursor: move;
-	height: 2rem;
+	height: 2.3rem;
 	position: relative;
 	display: flex;
-	line-height: 2rem;
+	line-height: 2.4rem;
 }
 .tool-window-title {
 	color: rgb(65,69,81);
@@ -65,7 +65,7 @@
 .tool-window-body {
 	background: rgb(244,245,246);
 	border: 1px solid rgb(204,207,211);
-	height: calc(100% - 6rem);
+	height: calc(100% - 6.5rem);
 	padding: .2rem .3rem;
 	overflow: auto;
 }
