--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -680,8 +680,12 @@
 	transition: color .3s ease-in-out;
 }
 .newDesign .chart-panel .x-panel-header .tool-icon:hover:before,
-.newDesign .chart-panel.panel-snapshots .x-panel-header .x-tool:hover:before {
+.newDesign .chart-panel.panel-snapshots .x-panel-header .x-tool:hover:before,
+.newDesign .chart-panel .x-panel-header .tool-icon.tool-active:before {
 	color: rgba(186,65,91,1);
+}
+.newDesign .chart-panel .x-panel-header .tool-chart-description:before {
+	content: "\f05a";
 }
 .newDesign .chart-panel .x-panel-header .tool-chart-settings:before {
 	content: "\f1de";
@@ -718,6 +722,7 @@
 	font-weight: 600;
 	top: -6px;
 }
+.newDesign .chart-panel .x-panel-header .tool-icon .x-tool-description,
 .newDesign .chart-panel .x-panel-header .tool-icon .x-tool-gear,
 .newDesign .chart-panel .x-panel-header .tool-icon .x-tool-help,
 .newDesign .chart-panel .x-panel-header .tool-icon .x-tool-collapse,
@@ -731,6 +736,9 @@
 .newDesign .chart-panel .x-panel-header .x-tool-over .x-tool-expand-bottom {
 	background: transparent !important;
 	position: absolute;
+}
+.newDesign .chart-panel .x-panel-header .tool-icon.tool-active{
+	border: 0;
 }
 
 /* Tables */
