Legend for Custom WMS layers & style updates

--- a/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidget.css
+++ b/src/__new/js/view/widgets/WorldWindWidget/WorldWindWidget.css
@@ -6,7 +6,7 @@
 	max-width: 40rem;
 	min-height: 10rem;
 	max-height: 25rem;
-	width: 260px;
+	width: 18rem;
 	background: rgba(255,255,255,.9);
 }
 #floater-world-wind-widget.open {
