--- a/src/__new/js/view/worldWind/layers/layerTools/LayerToolIcon.css
+++ b/src/__new/js/view/worldWind/layers/layerTools/LayerToolIcon.css
@@ -1,33 +1,25 @@
 .layer-tool-icon {
+	color: #555;
 	cursor: pointer;
-	display: inline-block;
-	position: relative;
-	float: right;
-	margin: 0 .15rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	height: 100%;
-	width: 1rem;
-}
-.layer-tool-icon.legend-icon img.active {
-	display: none;
-}
-.layer-tool-icon.legend-icon.open img {
-	display: none;
-}
-.layer-tool-icon.legend-icon.open img.active {
-	display: block;
+	width: 1.3rem;
 }
 
-/*.layer-tool-icon i {*/
-	/*color: rgba(104,103,116,.65);*/
-	/*display: inline-block;*/
-	/*font-size: .9rem;*/
-	/*font-family: "FontAwesome";*/
-	/*transition: color .3s ease-out;*/
-	/*vertical-align: middle;*/
-/*}*/
-/*.layer-tool-icon:hover i {*/
-	/*color: rgba(104,103,116,1);*/
-/*}*/
-/*.layer-tool-icon.open i {*/
-	/*color: #ad2738;*/
-/*}*/
+.layer-tool-icon:before {
+	font-family: "FontAwesome";
+	font-size: .85rem;
+	color: #555;
+	transition: color .3s ease-in-out;
+}
+.layer-tool-icon:hover:before {
+	color: rgba(186,65,91,1);
+}
+.layer-tool-icon.opacity-icon:before {
+	content: "\f24d";
+}
+.layer-tool-icon.legend-icon:before {
+	content: "\f022";
+}
