Better margin for layer tool icons

--- a/src/__new/js/view/worldWind/layers/layerTools/LayerTools.css
+++ b/src/__new/js/view/worldWind/layers/layerTools/LayerTools.css
@@ -1,7 +1,7 @@
 .layer-tools {
 	display: flex;
 	height: 100%;
-	margin-left: .2rem;
+	margin: 0 .2rem;
 }
 .panel-layer-group-body .layer-tools {
 }
