--- a/src/__new/js/view/components/Button/Button.html
+++ b/src/__new/js/view/components/Button/Button.html
@@ -1,1 +1,1 @@
-<div id="{{id}}" class="component-button {{classes}}" title="{{title}}">{{text}}</div>
+<div id="{{id}}" class="component-button {{classes}}" title="{{title}}">{{icon}}<span>{{text}}</span></div>
