--- a/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.css
+++ b/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.css
@@ -1,19 +1,15 @@
 /* triggers */
 .map-tool-trigger {
-	border-bottom: 1px solid #ddd;
+	border-bottom: 1px solid #eee;
 	cursor: pointer;
 	display: flex;
-	line-height: 1.7;
+	line-height: 1.5;
 	transition: background .3s ease-in-out;
+	padding: 0 .5rem;
 }
-.map-tool-trigger:hover {
+.map-tool-trigger:hover,
+.map-tool-trigger.active {
 	background: rgba(0,0,0,.07);
-}
-.map-tool-trigger.active .map-tool-trigger-label-title {
-	color: rgba(186,65,91,1);
-}
-.map-tool-trigger.active .map-tool-icon-svg path {
-	fill: rgba(186,65,91,1);
 }
 .map-tool-trigger-label {
 	align-items: center;
@@ -22,7 +18,7 @@
 }
 .map-tool-trigger-label-title {
 	color: rgb(65,69,81);
-	font-size: .95rem;
+	font-size: .9rem;
 	font-weight: 400;
 	padding: 0 .3rem;
 }
