--- a/src/__new/js/view/widgets/MapToolsWidget/MapToolsWidget.css
+++ b/src/__new/js/view/widgets/MapToolsWidget/MapToolsWidget.css
@@ -1,18 +1,32 @@
 #floater-map-tools-widget {
 	left: 17rem;
 	top: 10rem;
-	height: 12rem;
-	min-height: 12rem;
-	max-height: 16rem;
+	height: 16rem;
+	min-height: 14rem;
+	max-height: 20rem;
 	min-width: 16rem;
 	max-width: 24rem;
 }
 
 #floater-map-tools-widget .floater-body {
 	height: calc(100% - 2.3rem);
+	padding: 0;
 }
 
-.map-tools-triggers-container {
+.map-tools-container {
 	display: flex;
 	flex-direction: column;
+	padding: 1rem 0 0;
+}
+.map-tools-container > h4 {
+	padding: 0 .5rem;
+	font-size: .95rem;
+	line-height: 1.7;
+	font-weight: 400;
+	text-transform: uppercase;
+	color: rgba(186,65,91,1);
+	border-bottom: 1px solid #eee;
+}
+.map-tools-buttons-container > .component-button {
+	margin: .5rem;
 }
