Always hide scope selection switcher in the application mode

--- a/src/__new/js/view/widgets/CustomViewsWidget/CustomViewsWidget.css
+++ b/src/__new/js/view/widgets/CustomViewsWidget/CustomViewsWidget.css
@@ -17,7 +17,7 @@
 
 /* header */
 body.intro #floater-custom-views-widget .floater-header{
-	display: none;
+	display: none !important;
 }
 
 /* body */
