--- a/src/__new/js/view/widgets/MapToolsWidget/MapToolsWidget.css
+++ b/src/__new/js/view/widgets/MapToolsWidget/MapToolsWidget.css
@@ -1,9 +1,9 @@
 #floater-map-tools-widget {
 	left: 17rem;
 	top: 10rem;
-	height: 16rem;
+	height: 20rem;
 	min-height: 14rem;
-	max-height: 20rem;
+	max-height: 24rem;
 	min-width: 16rem;
 	max-width: 24rem;
 }
@@ -27,6 +27,9 @@
 	color: rgba(186,65,91,1);
 	border-bottom: 1px solid #eee;
 }
-.map-tools-buttons-container > .component-button {
+.map-tools-buttons-container-body {
 	margin: .5rem;
+}
+.map-tools-buttons-container-body > .component-button {
+	margin: 0 .5rem .5rem 0;
 }
