--- a/src/__new/js/view/widgets/WidgetFloater.html
+++ b/src/__new/js/view/widgets/WidgetFloater.html
@@ -15,6 +15,12 @@
 			<div title="{{compress}}" class="floater-tool widget-compress">
 				<i class="fa fa-compress"></i>
 			</div>
+			<div title="{{pin}}" class="floater-tool widget-pin">
+				<i class="fa fa-thumb-tack"></i>
+			</div>
+			<div title="{{detach}}" class="floater-tool widget-detach">
+				<i class="fa fa-external-link"></i>
+			</div>
 		</div>
 	</div>
 	<div class="floater-warning">
