--- a/src/__new/js/view/mapsContainer/MapsContainer.css
+++ b/src/__new/js/view/mapsContainer/MapsContainer.css
@@ -8,11 +8,18 @@
 	top: 0;
 }
 body.mode-3d .maps-container {
-	display: block;
+	display: flex;
 	position: absolute;
 }
+.maps-container .map-tools {
+	width: 0;
+	height: 100%;
+}
+.maps-container.tools-active .map-tools {
+	width: 35px;
+}
 .maps-container .map-fields {
-	width: 100%;
+	flex: 1;
 	height: 100%;
 }
 .world-wind-map-box {
