--- a/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.html
+++ b/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.html
@@ -1,4 +1,4 @@
-<div class="map-tool-trigger" id="{{id}}">
+<div class="map-tool-trigger" title="{{label}}" id="{{id}}">
 	<div class="map-tool-trigger-label">
 		<div class="map-tool-icon"></div>
 		<div class="map-tool-trigger-label-title">{{label}}</div>
