--- a/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.css
+++ b/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.css
@@ -26,11 +26,14 @@
 .map-tool-icon {
 	display: flex;
 	margin: 0 .3rem;
-	width: 1.1rem;
+	width: 1.3rem;
 }
 .map-tool-icon-svg {
 	flex: 1;
 	height: 1.1rem;
+}
+#layers-info-icon {
+	height: 1.3rem;
 }
 .map-tool-icon-svg path {
 	fill: rgb(65,69,81);
