--- a/src/__new/styles/projects.css
+++ b/src/__new/styles/projects.css
@@ -26,8 +26,11 @@ html.dromas .custom-views-category.active {
 html.dromas .custom-views-category:hover {
 	background: rgba(172,98,33,.2);
 }
+html.dromas .about-window-header {
+	background: url('../img/dromas/dromas-background.jpeg') no-repeat;
+}
 html.dromas .about-window-header-title {
-	background: rgba(172,98,33,.85);
+	background: rgba(172,98,33,.7);
 }
 
 /* ===================================================
