--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -964,6 +964,10 @@ body.application #sidebar-reports {
 	color: #666;
 }
 
+body.intro #hideAllExceptLogin {
+	display: none !important;
+}
+
 /* SpinKit
 The MIT License (MIT), Copyright (c) 2015 Tobias Ahlin */
 .sk-cube-grid {
