Clear selection from map tools - UI

--- a/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.css
+++ b/src/__new/js/view/widgets/MapToolsWidget/MapToolTrigger.css
@@ -1,6 +1,6 @@
 /* triggers */
 .map-tool-trigger {
-	border-bottom: 1px solid #eee;
+	border-bottom: 1px solid #e0e3e7;
 	cursor: pointer;
 	display: flex;
 	line-height: 1.5;
