--- a/public/__new/js/view/mapsContainer/MapsContainer.html
+++ b/public/__new/js/view/mapsContainer/MapsContainer.html
@@ -1,4 +1,7 @@
 <div class="maps-container" id="{{id}}">
-	<div class="map-tools"></div>
-	<div class="map-fields"></div>
+	<div>
+		<div class="map-tools"></div>
+		<div class="map-fields"></div>
+	</div>
+	<div id="maps-container-bar-bottom"></div>
 </div>
