World wind map functionality refactoring & modularization#Separate Map Window tools

--- a/public/__new/js/view/worldWind/WorldWindMap.css
+++ b/public/__new/js/view/worldWind/WorldWindMap.css
@@ -42,7 +42,7 @@
 }
 
 /* period label */
-.map-period-label {
+.map-name-label {
 	color: rgba(189,192,197,1);
 	background: rgba(33,38,53,.9);
 	font-weight: 500;
