--- a/public/__new/js/view/mapsContainer/MapsContainer.css
+++ b/public/__new/js/view/mapsContainer/MapsContainer.css
@@ -99,3 +99,9 @@ body.mode-3d .maps-container {
 .maps-container .map-fields .world-wind-map-box.selected .close-map-button {
 	border-right: 1px solid rgba(189,192,197,.7);
 }
+
+
+#maps-timeline, #maps-timeline > div {
+	width: 100%;
+	height: 100%;
+}
